bugfix: long admin titles could overlap action buttons

--- a/assets/css/org-management/styles.less
+++ b/assets/css/org-management/styles.less
@@ -614,7 +614,7 @@ hr {
 		.object-title {
 			background: #fff;
 			border-bottom: 3px solid #eee;
-			padding: 30px 30px 20px;
+			padding: 30px 125px 20px 30px;
 			position: relative;
 
 			h1 {
